🐛 FIXED: Fire emoji spreading + Data fetching issues
🔧 Fixed Fire Emoji Problem:
• Removed large wildfires.geojson file (98 hotspots loading automatically)
• Clear localStorage cache on startup to prevent old data
• App now starts with clean empty state
• Users must explicitly click Update to get data

🛠️ Improved Data Fetching:
• Multiple CORS proxy fallbacks for better reliability
• Better error handling with helpful user messages
• Validate CSV data before processing
• Continue if one satellite source fails
• Informative progress messages

🎨 Enhanced Empty State:
• Beautiful animated fire icon
• Clear instructions for users
• Professional gradient design
• Encouraging call-to-action button

🎯 Result: Clean startup + Reliable data fetching + Better UX

--- a/src/index.html
+++ b/src/index.html
@@ -70,9 +70,10 @@
     <!-- Empty State -->
     <div id="emptyState" class="empty-state" style="display: none;">
         <div class="empty-content">
-            <h2>No active hotspots found</h2>
-            <p>Try selecting a different region or click "🔄 Update" for fresh data</p>
-            <button onclick="loadData(true)">🔄 Get Fresh Data</button>
+            <div class="empty-icon">🔥</div>
+            <h2>Ready to Track Wildfires</h2>
+            <p>Click the <strong>🔄 Update</strong> button above to get the latest wildfire data from NASA satellites</p>
+            <button onclick="fetchFreshData()" class="get-data-btn">🛰️ Get Live Satellite Data</button>
         </div>
     </div>
 
