🔧 IMPROVED: Data fetching reliability and debugging
✅ Enhanced CORS Proxy Handling:
• Reordered proxies by reliability (corsproxy.io first)
• Added direct request option as fallback
• Added 15-second timeout to prevent hanging
• Better proxy identification in logs

🛠️ Better Error Handling:
• Detailed debug logging for each step
• Timeout detection and handling
• More specific error messages
• 1-second delay between proxy attempts

📊 Demo Data Fallback:
• Added loadDemoData() function for testing
• Demo data button in error banner
• 3 sample California hotspots for testing
• Helpful user messages

🧪 Debug Tools:
• Created test-fetch.html for CORS proxy testing
• Better validation of CSV responses
• More informative progress messages

🎯 Result: More reliable data fetching with better user feedback

--- a/src/index.html
+++ b/src/index.html
@@ -100,7 +100,8 @@
     <!-- Error Banner -->
     <div id="errorBanner" class="error-banner" style="display: none;">
         <span id="errorMessage"></span>
-        <button onclick="loadData(true)">🔄 Try Again</button>
+        <button onclick="fetchFreshData()">🔄 Try Again</button>
+        <button onclick="loadDemoData()" style="margin-left: 10px;">📊 Load Demo Data</button>
     </div>
 
     <!-- Leaflet JS -->
